--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "description": "activities system",
+  "scripts": {
+    "test": "karma"
+  },
   "engines": {
     "node": ">= 0.11.12"
   },
@@ -11,8 +14,19 @@
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-register": "^6.14.0",
+    "casperjs": "^1.1.3",
     "gulp": "^3.9.1",
     "gulp-webpack": "^1.5.0",
+    "jasmine": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-requirejs": "^1.1.0",
+    "karma-webpack": "^1.8.0",
+    "object-assign": "^4.1.0",
+    "phantomjs": "^2.1.7",
+    "requirejs": "^2.3.2",
     "webpack": "^1.13.2"
   },
   "babel": {
